samples/_failures_safe/1761497864_38cc4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c12caca7.c: In function ‘main’:
./samples/SAFE/__tmp_c12caca7.c:150:9: error: expected expression at end of input
  150 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_c12caca7.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c12caca7.c:150:9: error: expected declaration or statement at end of input
